; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/nodes/extr_readfuncs.c_ReadCommonJoin.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/nodes/extr_readfuncs.c_ReadCommonJoin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@jointype = common dso_local global i32 0, align 4
@JoinType = common dso_local global i32 0, align 4
@inner_unique = common dso_local global i32 0, align 4
@joinqual = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*)* @ReadCommonJoin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ReadCommonJoin(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %3 = call i32 (...) @READ_TEMP_LOCALS()
  %4 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %5 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %4, i32 0, i32 0
  %6 = call i32 @ReadCommonPlan(i32* %5)
  %7 = load i32, i32* @jointype, align 4
  %8 = load i32, i32* @JoinType, align 4
  %9 = call i32 @READ_ENUM_FIELD(i32 %7, i32 %8)
  %10 = load i32, i32* @inner_unique, align 4
  %11 = call i32 @READ_BOOL_FIELD(i32 %10)
  %12 = load i32, i32* @joinqual, align 4
  %13 = call i32 @READ_NODE_FIELD(i32 %12)
  ret void
}

declare dso_local i32 @READ_TEMP_LOCALS(...) #1

declare dso_local i32 @ReadCommonPlan(i32*) #1

declare dso_local i32 @READ_ENUM_FIELD(i32, i32) #1

declare dso_local i32 @READ_BOOL_FIELD(i32) #1

declare dso_local i32 @READ_NODE_FIELD(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
